# dimensionH5

./: ARCHITECTURE_REVIEW.md  BRINGUP_STM32H5.md  CMakeLists.txt  PR_PROPOSAL.md  README.md  README_WEB.md  dimension_chorus_stm32h5.md  resample.py  test_playwright.py
.github/workflows/: ci.yml  resample.yml  web.yml
app/: audio_app.c  audio_app.h  audio_buffers.h  audio_engine.c  audio_engine.h
core/: dimension_chorus.c  dimension_chorus.h  dimension_modes.c  dimension_modes.h  dsp_biquad.c  dsp_biquad.h  dsp_common.h  dsp_interp.c  dsp_interp.h  dsp_math.h
docs/: ARCHITECTURE_REVIEW.md  EXECUTION_PLAN.md  OFFLINE_VALIDATION_GUIDE.md  TECHNICAL_AUDIT_2026-03-29.md  TEST_PLAN.md  V1_SCOPE.md  dsp-module-guidelines.md  patch-schema.md  v1-spec.md
platform/stm32h5/: audio_buffers.c  audio_buffers.h  audio_codec_if.c  audio_codec_if.h  audio_platform_stm32h5.c  audio_platform_stm32h5.h  cubemx_integration_guide.md
platform/web/: build.sh  index.html  main.js  wasm_wrapper.c  worklet.js
scripts/: run_offline_validation.sh
tests/: .gitignore  CMakeLists.txt  README.md  findings.md  offline_runner.c  render_wav_main.c  render_wav_main.c.orig  test_audio_engine.c  test_biquad.c  test_dimension_core.c  test_dsp_core.c  test_interp.c  test_main.c  test_signals.c  test_signals.h  wav_reader.c  wav_reader.h  wav_writer.c  wav_writer.h
